Recipedia [2.4] Implement tags for recipes
Search by tags
Users can now add tags to recipes
